# cornflow

./: .coveragerc  .dockerignore  .gitignore  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CUSTOM_ROLES_ACTIONS_EXAMPLE.md  Dockerfile  InstallingAirflow.md  LICENSE  QUICK_START_GUIDE.RST  README.md  README.rst  SECURITY.md  Vagrantfile  admin-spa.html  api_functions.py  architecture.html  cloudbuild.yaml  codecov.yml  concepts.html  docker-compose-airflow-celery-separate.yml  docker-compose-celery-2w.yml  docker-compose-cornflow-celery.yml  docker-compose-cornflow-ldap.yml  docker-compose-cornflow-local-build.yml  docker-compose-cornflow-new-dags.yml  docker-compose-cornflow-separate.yml  docker-compose.yml  endpoints.html  examples.html  flask_commands.txt  genindex.html  gunicorn.py  includeme.html  index.html  index.md  init_cornflow_service.py  initapp.py  initapp.sh  (+14 more)
cornflow-dags/: README.rst  pyproject.toml  requirements-dev.txt  requirements.txt
cornflow-dags/DAG/: .dagignore  activate_checks_dag.py  activate_dags.py  call_cornflow.py  connection_cleanup.py  dag_timer.py  execution_files_cleanup.py  graph_coloring.py  hk_2020_dag.py  hk_2020_dag_output.json  hk_2020_dag_venv.py  hk_2020_functions.py  optim_dag.py  run_deployed_dags.py  solve_model_dag_input.json  update_all_schemas.py  update_all_variables.py  update_dag_registry.py  update_example_data.py  utils.py  wind_problem.py
cornflow-dags/DAG/auto_scripts/: automatic_scripts.py
cornflow-dags/DAG/bar_cutting/: README.rst  __init__.py
cornflow-dags/DAG/facility_location/: __init__.py
cornflow-dags/DAG/graph_coloring/: README.rst  __init__.py  input.json
cornflow-dags/DAG/knapsack/: DynamicSolver.py  Heuristic.py  README.rst  RandomHeuristic.py  __init__.py  parameters.py
cornflow-dags/DAG/network_planning/: __init__.py
cornflow-dags/DAG/pedido_sugerido/: __init__.py  experiment.py  model.py  model_ortools.py  tools.py
cornflow-dags/DAG/roadef/: README.RST  __init__.py
cornflow-dags/DAG/rostering/: README.rst  __init__.py  aaa.py
cornflow-dags/DAG/solve_model_dag/: __init__.py
cornflow-dags/DAG/sudoku/: README.rst  __init__.py
cornflow-dags/DAG/tsp/: README.rst  __init__.py
cornflow-dags/DAG/two_dimension_bin_packing/: README.rst  __init__.py
cornflow-dags/DAG/vrp/: README.rst  __init__.py  instance.py  modelClosestNeighbor.py  output.json  solution.py
cornflow-dags/examples/: dag_tests_cornflow.py
cornflow-dags/tests/: test_dags.py  test_dags_af.py
cornflow-dags/tests/integration/: test_dags_af.py
cornflow-dags/tests/unit/: test_dags.py  test_execution_files_cleanup.py  test_rostering.py  test_twovalidtypes.py
cornflow-server/: Dockerfile  FASTAPI_MIGRATION_ROADMAP.md  MANIFEST.in  README.rst  changelog.rst  config.cfg  docker-compose.yml  init_cornflow_service.py  pyproject.toml  pytest.ini  requirements-dev-sqlite.txt  requirements-dev.txt  requirements-fastapi.txt  requirements-sqlite.txt  requirements.txt  setup.py
cornflow-server/airflow_config/: Dockerfile  Dockerfile-k8s  Dockerfile.base  airflow_local_settings.py  ldapbootstrap.ldif  requirements.txt
cornflow-server/airflow_config/logs/: README.rst
cornflow-server/airflow_config/scripts/: init_airflow_service.py  solver_installation.py
cornflow-server/cornflow/: _version.py  app.py  config.py  deploy.py  gunicorn.py  init_cornflow_service.py  init_service.py  local.py  orchestrator_constants.py  patched.py
cornflow-server/cornflow/cli/: README.rst  __init__.py  actions.py  arguments.py  calculate_migrations.py  cli.py  config.py  init_cornflow_service.py  init_permissions.py  migrations.py  permissions.py  roles.py  schemas.py  service.py  users.py  utils.py  views.py
cornflow-server/cornflow/commands/: __init__.py  access.py  actions.py  auxiliar.py  dag.py  permissions.py  roles.py  schemas.py  users.py  views.py
cornflow-server/cornflow/endpoints/: __init__.py  action.py  alarms.py  apiview.py  case.py  connection_cleanup.py  dag.py  data_check.py  example_data.py  execution.py  execution_databricks.py  health.py  instance.py  licenses.py  login.py  main_alarms.py  meta_resource.py  permission.py  reports.py  roles.py  schemas.py  signup.py  tables.py  token.py  user.py  user_role.py  version.py
cornflow-server/cornflow/external_app/: README.rst
cornflow-server/cornflow/models/: __init__.py  action.py  alarms.py  apiview.py  base_data_model.py  case.py  connection.py  dag.py  dag_permissions.py  execution.py  instance.py  main_alarms.py  meta_model.py  meta_models.py  permission.py  permissions.py  reports.py  role.py  roles.py  user.py  user_role.py  view.py
cornflow-server/cornflow/schemas/: __init__.py  alarms.py  apiview.py  case.py  common.py  dag.py  data_check.py  example_data.py  execution.py  health.py  instance.py  main_alarms.py  model_json.py  patch.py  permissions.py  query.py  reports.py  role.py  schemas.py  solution_log.py  tables.py  user.py  user_role.py  view.py
cornflow-server/cornflow/shared/: __init__.py  airflow.py  authentication.py  compress.py  const.py  constants_cli.py  databricks.py  email.py  exceptions.py  licenses.py  log_config.py  messages.py  query_tools.py  socket.py  utils.py  utils_tables.py  validators.py
cornflow-server/cornflow/static/: v1.json
cornflow-server/cornflow/tests/: base_test_execution.py  const.py  custom_liveServer.py  custom_live_server.py  custom_test_case.py
cornflow-server/cornflow_f/: README.md  alembic.ini  cli.py  config.py  database.py  main.py  models.py  schemas.py  security.py
cornflow-server/cornflow_f/alembic/: env.py  script.py.mako
cornflow-server/cornflow_f/cli/: __init__.py  assignments.py  (+4 more)
cornflow-server/examples/: basic_functions.py  pulp_varnames.py
docs/: Makefile  endpoints.rst  models.rst  pyproject.toml  requirements.txt
docs/source/: AUTHORS.txt  admin-spa.rst  apireference.rst  architecture.rst  conf.py  examples.rst  index.rst  python-api.rst  stable-rest-api-ref.rst
libs/client/: .coveragerc  MANIFEST.in  README.rst  changelog.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
(+942 files in other folders)
