[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cornflow-dags"
version = "1.3.0"
description = "Public DAGs for cornflow server"
authors = [
    { name = "baobab soluciones", email = "cornflow@baobabsoluciones.es" }
]
readme = "README.rst"
urls = { repository = "https://github.com/baobabsoluciones/cornflow" }
license = { text = "Apache Software License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
requires-python = ">=3.10"
dependencies = [
    "cornflow-client>=1.2.0",
    "orloge<=0.17.2",
    "PuLP<=2.9.0",
    "pandas<=2.2.0",
    "hackathonbaobab2020[solvers]",
    "pytups<=0.86.2",
    "ortools<=9.8.3296",
    "xmltodict<=0.13.0",
    "openpyxl<=3.1.2",
    "pyomo<=6.7.0",
    "tsplib95<=0.7.1",
    "numpy<2.0.0",
    "highspy==1.9.0",
]

[project.optional-dependencies]
dev = [
    "coverage[toml]>=7.0",
    "numpyencoder",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["DAG"]
exclude = ["tests*"]

[tool.setuptools]
include-package-data = true

[tool.coverage.run]
branch = true
source = ["."]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError",
]
