[project]
name = "cornflow"
version = "1.2.4"
description="cornflow is an open source multi-solver optimization server with a REST API built using flask."
requires-python = ">=3.9"
dependencies = [
    "alembic==1.9.2",
    "apispec<=6.3.0",
    "cachetools==5.3.3",
    "click<=8.1.7",
    "cornflow-client",
    "cryptography<=44.0.1",
    "disposable-email-domains>=0.0.86",
    "Flask==2.3.2",
    "flask-apispec<=0.11.4",
    "Flask-Bcrypt<=1.0.1",
    "Flask-Compress<=1.14",
    "flask-cors>=4.0.2",
    "flask-inflate<=0.3",
    "Flask-Migrate<=4.0.5",
    "Flask-RESTful<=0.3.10",
    "Flask-SQLAlchemy==2.5.1",
    "gevent==23.9.1",
    "greenlet<=2.0.2;python_version<'3.11'",
    "greenlet==3.0.3;python_version>='3.11'",
    "gunicorn<=23.0.0",
    "jsonpatch<=1.33",
    "ldap3<=2.9.1",
    "marshmallow<=3.20.2",
    "PuLP",
    "psycopg2-binary<=2.9.9",
    "PyJWT<=2.8.0",
    "pytups>=0.86.2",
    "requests<=2.32.4",
    "SQLAlchemy==1.3.21",
    "webargs<=8.3.0",
    "Werkzeug==3.0.6",
]
authors= [{name= "baobab soluciones", email= "cornflow@baobabsoluciones.es"}]
maintainers= [{name= "baobab soluciones", email= "cornflow@baobabsoluciones.es"}]
readme='README.rst'
classifiers= [
        "Programming Language :: Python :: 3",
        "Operating System :: OS Independent",
        "Development Status :: 5 - Production/Stable",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[project.scripts]
cornflow = "cornflow.cli:cli"

[dependency-groups]
dev = ["alabaster",
    "Babel",
    "colorama",
    "coverage",
    "docutils",
    "Flask-Testing",
    "imagesize",
    "orloge",
    "packaging",
    "pipreqs",
    "Pygments",
    "pyparsing",
    "snowballstemmer",
    "Sphinx",
    "sphinxcontrib-applehelp",
    "sphinxcontrib-devhelp",
    "sphinxcontrib-htmlhelp",
    "sphinxcontrib-httpdomain",
    "sphinxcontrib-jsmath",
    "sphinxcontrib-qthelp",
    "sphinxcontrib-serializinghtml",
    "sphinxcontrib-redoc",
    "sphinx_design",
    "shibuya"
]
