[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cornflow"
version = "1.3.0"
description = "Cornflow is an open source multi-solver optimization server with a REST API built using flask."
readme = "README.rst"
authors = [
    { name = "baobab soluciones", email = "cornflow@baobabsoluciones.es" }
]
license = { text = "Apache Software License" }
urls = { repository = "https://github.com/baobabsoluciones/cornflow" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
]
requires-python = ">=3.10"
dependencies = [
    "alembic==1.9.2",
    "apispec==6.3.0",
    "cachetools==5.3.3",
    "click==8.1.7",
    "cornflow-client==1.3.1rc1",
    "cryptography==46.0.5",
    "disposable-email-domains==0.0.162",
    "Flask==2.3.2",
    "flask-apispec==0.11.4",
    "Flask-Bcrypt==1.0.1",
    "Flask-Compress==1.14",
    "flask-cors==6.0.0",
    "flask-inflate==0.3",
    "Flask-Migrate==4.0.5",
    "Flask-RESTful==0.3.10",
    "Flask-SQLAlchemy==2.5.1",
    "gevent==23.9.1",
    "greenlet==2.0.2; python_version < \"3.11\"",
    "greenlet==3.0.3; python_version >= \"3.11\"",
    "gunicorn==23.0.0",
    "jsonpatch==1.33",
    "ldap3==2.9.1",
    "marshmallow==3.26.2",
    "PuLP==2.9.0",
    "psycopg2==2.9.9",
    "PyJWT==2.12.0",
    "pytups==0.86.2",
    "requests==2.32.4",
    "SQLAlchemy==1.3.21",
    "webargs==8.3.0",
    "Werkzeug==3.0.6",
]

[project.optional-dependencies]
dev = [
    "tomli>=2.0; python_version < \"3.11\"",
    "alabaster",
    "Babel",
    "colorama",
    "coverage[toml]>=7.0",
    "docutils",
    "Flask-Testing",
    "imagesize",
    "orloge",
    "packaging",
    "pipreqs",
    "Pygments",
    "pyparsing",
    "snowballstemmer",
    "Sphinx",
    "sphinxcontrib-applehelp",
    "sphinxcontrib-devhelp",
    "sphinxcontrib-htmlhelp",
    "sphinxcontrib-httpdomain",
    "sphinxcontrib-jsmath",
    "sphinxcontrib-qthelp",
    "sphinxcontrib-serializinghtml",
    "sphinxcontrib-redoc",
    "sphinx_design",
    "shibuya",
]

[project.scripts]
cornflow = "cornflow.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["cornflow*"]
exclude = ["*tests*"]

[tool.setuptools.package-data]
cornflow = ["migrations/*", "migrations/versions/*"]

[tool.setuptools]
include-package-data = true

[tool.coverage.run]
branch = true
source = ["./cornflow/"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError",
]
