[project]
name = "cornflow-client"
version = "1.3.0"
description="Client to connect to a cornflow server"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "genson",
    "jsonschema",
    "marshmallow",
    "pytups",
]
authors= [{name= "baobab soluciones", email= "sistemas@baobabsoluciones.es"}]
maintainers= [{name= "baobab soluciones", email= "sistemas@baobabsoluciones.es"}]
readme='README.rst'
classifiers= [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: Apache Software License",
        "Operating System :: OS Independent",
        "Development Status :: 5 - Production/Stable",
]

[project.optional-dependencies]
excel = ["openpyxl", "pandas"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "cornflow_client",
    "cornflow_client.airflow",
    "cornflow_client.core",
    "cornflow_client.schema",
    "cornflow_client.tests",
    "cornflow_client.data",
    "cornflow_client.tests.data",
    "cornflow_client.tests.integration",
    "cornflow_client.tests.unit"
]

[tool.setuptools.package-data]
"cornflow_client.data"= ["*.json"]
"cornflow_client.tests.data"= ["*.json", "*.xlsx", "*.mps"]

[dependency-groups]
dev = ["black", "coverage", "openpyxl", 'pulp', "ortools"]
