[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "cornflow-client"
version = "1.3.0"
description = "Client to connect to a cornflow server"
readme = "README.rst"
authors = [
    { name = "baobab soluciones", email = "sistemas@baobabsoluciones.es" }
]
license = { text = "Apache Software License" }
urls = { repository = "https://github.com/baobabsoluciones/cornflow" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
]
requires-python = ">=3.10"
dependencies = [
    "requests<=2.32.4",
    "genson<=1.2.2",
    "jsonschema<=4.21.1",
    "marshmallow<=3.20.2",
    "pytups<=0.86.2",
    "ortools<=9.8.3296",
    "PuLP<=2.9.0",
    'tomli>=2.0; python_version < "3.11"',
]

[project.optional-dependencies]
dev = [
    "coverage[toml]>=7.0",
    "openpyxl",
]
excel = [
    "openpyxl",
    "pandas",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cornflow_client*"]
exclude = ["*tests*"]

[tool.setuptools.package-data]
cornflow_client = ["data/*", "tests/data/*"]

[tool.setuptools]
include-package-data = true

[tool.coverage.run]
branch = true
source = ["./cornflow_client/"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError",
]
